--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
 #column7 {
     border: 1px solid black;
     height: 500px;
-    width:120px;
+    width: 120px;
 }
 
 #column1 {
@@ -51,19 +51,19 @@ h1 {
 }
 
 .redPiece {
-    color: red;
+    background-color: red;
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    z-index: 2;
+    width: 50px;
+    height: 50px;
+
 
 }
 
 .blackPiece {
-    color: black;
+    background-color: black;
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    z-index: 2;
+    width: 50px;
+    height: 50px;
+
 
 }
